--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+*{
+  margin : 0;
+  padding: 0;
+}
+
 * > *{
   font-family: "Poppins", sans-serif;
   font-weight: 400;
@@ -19,7 +24,7 @@
 
 .App {
   text-align: center;
-  padding: 4em 0;
+  /* padding: 4em 0; */
 }
 
 .bg-yellow{
@@ -41,4 +46,8 @@
 
 .form-input{
   @apply mt-1 block w-full py-2 px-3 border border-gray-200 bg-white rounded-md focus:outline-none focus:ring-indigo-500 sm:text-sm 
+}
+
+.form-input-modified{
+  @apply text-xl mt-1 block w-[500px] py-2 px-3 border border-gray-200 bg-white rounded-md focus:outline-none focus:ring-indigo-500 
 }
